fix tag wrap issue

--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@
 	--accent-color: #001aff;
 	--accent-color-light: #a4acf5;
 	--accent-color-light-alpha: #a4acf5cc;
+	--warn-color: #ff5379;
 	--light-gray: #ccc;
 	--medium-gray: #9b9b9b;
 	--dark-gray: #555;
